--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,14 @@ main h1 {
       transform: translateY(0);
     }
   }
+  @keyframes slideInFromTop {
+    0% {
+      transform: translateY(-100%);
+    }
+    100% {
+      transform: translateY(0);
+    }
+  }
 
 
 footer {
@@ -78,15 +86,18 @@ footer {
 }
 
 .slideInFromLeft {
-    animation: slideInFromLeft 1s ease-out;
+    animation: slideInFromLeft 2s ease-out;
   }
   
 .slideInFromRight {
-    animation: slideInFromRight 1s ease-out;
+    animation: slideInFromRight 2s ease-out;
   }
 .slideInFromBottom {
-    animation: slideInFromBottom 1s ease-out;
+    animation: slideInFromBottom 2s ease-out;
   }
+.slideInFromTop {
+  animation: slideInFromTop 0.5s ease-out;
+}
 
 .bd-placeholder-img {
     font-size: 1.125rem;
