--- a/css/styles.css
+++ b/css/styles.css
@@ -33,8 +33,11 @@
     --neutral-900: #242226;
 }  
 
+body {
+  transition: all 0.5s ease;
+}
 
-/*Dark mode styling*/
+/*Drk mode styling*/
 body.dark {
   background-color: #07120d;
   transition: all 0.5s ease;
@@ -46,6 +49,14 @@ body.dark #theme-toggle-button {
   transition: all 0.5s ease;
 }
 
+body.dark main h1 {
+  transition: all 0.5s ease;
+}
+
+.featurette-divider {
+  color: var(--primary-500);
+}
+
 #theme-toggle-button {
   background-color: #212529;
   border: none;
@@ -55,16 +66,18 @@ body.dark #theme-toggle-button {
 }
 
 main {
-    background-image: linear-gradient(to bottom right, var(--primary-500), var(--primary-200));
     padding: 2rem;
 }
 
 main h1 {
-    color:white;
-    font-size: 2.5rem;
-    text-align: center;
-    margin-bottom: 3rem;
-    margin-top: 3rem;
+  padding: 0.2em;
+  transition: all 0.5s ease;
+  color: black;
+  font-size: 6rem;
+  text-align: left;
+  background-image: linear-gradient(to bottom right, var(--primary-500), var(--primary-200));
+  background-clip: text; /* Clip the background to the padding box */
+  color: transparent; /* Hide the text */
 }
 @keyframes slideInFromLeft {
     0% {
