--- a/css/styles.css
+++ b/css/styles.css
@@ -65,18 +65,6 @@ scale: 1.5;
 transition: all 0.5s ease;
 }
 
-@keyframes wipe-enter {
-	0% {
-		transform: scale(0, 0.03);
-	}
-	50% {
-		transform: scale(1, .03);
-	}
-}
-main h1 {
-  animation: wipe-enter 1s ease-out;
-}
-
 main {
 padding: 2rem;
 display: flex;
@@ -91,12 +79,14 @@ position: absolute; /* Position the arrow absolutely */
 bottom: 20px; /* Adjust the distance from the bottom */
 }
 
+
 main h1 {
+display: block;
 padding: 0.2em;
 transition: all 0.5s ease;
 color: black;
-font-size: 10rem;
-text-align: left;
+font-size: 10em;
+text-align: center;
 background-image: linear-gradient(to bottom right, var(--primary-500), var(--primary-200));
 background-clip: text; /* Clip the background to the padding box */
 color: transparent; /* Hide the text */
@@ -105,9 +95,11 @@ color: transparent; /* Hide the text */
 0% {
 transform: translateX(-100%);
 }
+
 100% {
 transform: translateX(0);
 }
+
 }
 
 @keyframes slideInFromRight {
@@ -138,39 +130,13 @@ transform: translateY(0);
 opacity: 0;
 }
 
-.animate.slideInFromTop {
-animation: slideInFromTop 1s ease-out forwards;
-}
-
-.animate.slideInFromBottom {
-animation: slideInFromBottom 1s ease-out forwards;
-}
-
-.animate.slideInFromRight {
-animation: slideInFromRight 1s ease-out forwards;
-}
-
-.animate.slideInFromLeft {
-animation: slideInFromLeft 1s ease-out forwards;
-}
-
-
 footer {
 text-align: center;
 }
 
-.slideInFromLeft {
-animation: slideInFromLeft 2s ease-out;
-}
-
-.slideInFromRight {
-animation: slideInFromRight 2s ease-out;
-}
-.slideInFromBottom {
-animation: slideInFromBottom 2s ease-out;
-}
-.slideInFromTop {
-animation: slideInFromTop 0.5s ease-out;
+.animate.slideInFromLeft {
+opacity: 100;  
+animation: slideInFromLeft 1.5s ease-out;
 }
 
 .bd-placeholder-img {
