--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,13 @@ background-clip: text; /* Clip the background to the padding box */
 color: transparent; /* Hide the text */
 }
 
+@media screen and (max-width: 596px) {
+  #main-header h1 {
+    font-size: 5em;
+    padding-bottom: 3em;
+  }
+}
+
 h2.featurette-heading .last-word {
   background-image: linear-gradient(to bottom right, var(--primary-500), var(--primary-200));
   background-clip: text; /* Clip the background to the padding box */
@@ -195,11 +202,13 @@ font-size: 3.5rem;
 
 
 /*Join page styling*/
+
 .application-form {
   width: 100%;
   height: 90vh;
   border: none;
-  padding: 2em;
+  padding-top: 5em;
+  animation: slideInFromBottom 1.2s ease-out;
 }
 
 .b-example-divider {
