Service page + all pics

--- a/css/styles.css
+++ b/css/styles.css
@@ -203,8 +203,60 @@ font-size: 3.5rem;
 
 
 /*Service Styling*/
-.service h1 {
+
+.service {
+  border: none;
+  padding-top: 10em;
+  padding-bottom: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.service h1 {
+  padding-bottom: 0.1em;
+  font-size: 8em;
+  text-align: center;
+  background-image: linear-gradient(to bottom right, var(--primary-500), var(--primary-200));
+  background-clip: text; /* Clip the background to the padding box */
+  color: transparent; /* Hide the text */
+}
+
+.service p {
+  text-align: center;
+  font-size: 2em;
+}
+
+#contact-message {
+  font-size: 1.5em;
+}
+
+@media screen and (max-width: 882px) {
+  .service h1 {
+    font-size: 3em;
+  }
+  .service p {
+    font-size: 1.5em;
+  }
+  
+}
+
+@media screen and (max-width: 882px) {
+  .service h1 {
+    margin: 0; /* Remove any margin */
+    padding: 0; /* Remove any padding */
+    font-size: 3em;
+  }
+  .service p {
+    font-size: 1.5em;
+    margin: 0; /* Remove any margin */
+    padding: 0; /* Remove any padding */
+  }
+  #contact-message {
+    font-size: 1em;
+  }  
+}
+
 
 /*Join page styling*/
 
